@@ -69,7 +69,7 @@ public class BallerinaPathSegmentList implements PathSegmentList {
         List<PathParameterSymbol> pathParams = new ArrayList<>();
 
         int internalPathParamCount = 0;
-        List<Name> segments = this.internalPathSegmentSymbols.stream().map(s -> s.name).collect(Collectors.toList());
+        List<Name> segments = this.internalPathSegmentSymbols.stream().map(s -> s.name).toList();
         for (int i = 0; i < segments.size(); i++) {
             Name internalSegment = segments.get(i);
             BResourcePathSegmentSymbol pathSegSymbol = this.internalPathSegmentSymbols.get(i);
