@@ -114,7 +114,7 @@ public class ZipConverter extends PathConverter {
                             .sorted(Comparator.reverseOrder())
                             .limit(1)
                             .map(SortablePath::getPath)
-                            .collect(Collectors.toList());
+                            .toList();
                 }
                 if (packageID.version.value.isEmpty() && !packageID.orgName.equals(Names.BUILTIN_ORG)
                         && !packageID.orgName.equals(Names.ANON_ORG) && !pathList.isEmpty()) {
