@@ -96,7 +96,7 @@ public class AddConditionalDefaultValueCodeAction implements DiagnosticBasedCode
             return Optional.empty();
         }
         List<TypeSymbol> memberTypes = ((UnionTypeSymbol) actualType).memberTypeDescriptors().stream()
-                .filter(typeSymbol -> typeSymbol.typeKind() != TypeDescKind.NIL).collect(Collectors.toList());
+                .filter(typeSymbol -> typeSymbol.typeKind() != TypeDescKind.NIL).toList();
         UnionTypeSymbol unionType = semanticModel.get().types().builder().UNION_TYPE
                 .withMemberTypes(memberTypes.toArray(TypeSymbol[]::new)).build();
         return Optional.of(unionType);
