@@ -99,7 +99,7 @@ public class ExecutorPositionsUtil {
                     }
                 })
                 .map(symbol -> (FunctionSymbol) symbol)
-                .collect(Collectors.toList());
+                .toList();
 
         if (defaultModuleFunctionList.size() == 1) {
             JsonObject mainFunctionObject = new JsonObject();
@@ -124,7 +124,7 @@ public class ExecutorPositionsUtil {
                     }
                 })
                 .map(symbol -> (ServiceDeclarationSymbol) symbol)
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(serviceSymbol -> {
                     JsonObject serviceObject = new JsonObject();
                     serviceObject.addProperty(KIND, SOURCE);
