@@ -70,7 +70,7 @@ public class BArray extends IndexedCompoundVariable {
             List<Field> fields = jvmValueRef.referenceType().allFields();
             Field arrayValueField = jvmValueRef.getValues(fields).entrySet().stream().filter(fieldValueEntry ->
                     fieldValueEntry.getValue() != null && fieldValueEntry.getKey().toString().endsWith("Values"))
-                    .map(Map.Entry::getKey).collect(Collectors.toList()).get(0);
+                    .map(Map.Entry::getKey).toList().get(0);
 
             // If count > 0, returns a sublist of the child variables
             // If count == 0, returns all child variables
@@ -126,7 +126,7 @@ public class BArray extends IndexedCompoundVariable {
                 .filter(fieldValueEntry -> fieldValueEntry.getValue() != null &&
                         fieldValueEntry.getKey().toString().endsWith("ArrayValue.size"))
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList()).get(0);
+                .toList().get(0);
         arraySize = ((IntegerValue) arrayRef.getValue(arraySizeField)).value();
     }
 }
