@@ -278,7 +278,7 @@ public class Type {
                         Generator.getDefaultableVariableList(functionSignature.parameters(), Optional.empty(),
                                 semanticModel, module);
                 functionType.paramTypes.addAll(variables.stream().map((defaultableVariable) -> defaultableVariable.type)
-                        .collect(Collectors.toList()));
+                        .toList());
                 if (functionSignature.returnTypeDesc().isPresent()) {
                     ReturnTypeDescriptorNode returnType = functionSignature.returnTypeDesc().get();
                     functionType.returnType = Type.fromNode(returnType.type(), semanticModel, module);
@@ -328,7 +328,7 @@ public class Type {
         } else if (node instanceof TupleTypeDescriptorNode) {
             TupleTypeDescriptorNode typeDescriptor = (TupleTypeDescriptorNode) node;
             type.memberTypes.addAll(typeDescriptor.memberTypeDesc().stream().map(memberType ->
-                    Type.fromNode(memberType, semanticModel, module)).collect(Collectors.toList()));
+                    Type.fromNode(memberType, semanticModel, module)).toList());
             type.isTuple = true;
         } else if (node instanceof MemberTypeDescriptorNode) {
             MemberTypeDescriptorNode member = (MemberTypeDescriptorNode) node;
