@@ -493,7 +493,7 @@ public class CompilerPluginTests {
         List<Diagnostic> reportedDiagnostics = diagnosticResult.diagnostics()
                 .stream()
                 .sorted(Comparator.comparing(Diagnostic::message))
-                .collect(Collectors.toList());
+                .toList();
 
         Assert.assertEquals(reportedDiagnostics.get(0).diagnosticInfo().severity(), DiagnosticSeverity.ERROR);
         Assert.assertEquals(reportedDiagnostics.get(1).diagnosticInfo().severity(), DiagnosticSeverity.WARNING);
